--- a/Employees/webapp/view/MainView.view.xml
+++ b/Employees/webapp/view/MainView.view.xml
@@ -46,7 +46,7 @@
                                     </Column>
                                     </columns>
                                     <items>
-                                        <ColumnListItem >
+                                        <ColumnListItem type="Active" press="showPostalCode">
                                             <cells>
                                                 <Label text="{EmployeeID}"/>
                                                 <Label text="{LastName}, {FirstName}"/>
