08 Modelos - Conceptos Avanzados

--- a/Employees/webapp/view/MainView.view.xml
+++ b/Employees/webapp/view/MainView.view.xml
@@ -10,36 +10,39 @@
 					<content>
                         <HBox>
                             <Label id="labelEmployee" labelFor="inputEmployee" text="{i18n>labelEmployee}" class="sapUiSmallMargin"/>
-                            <Input id="inputEmployee" value="{/EmployeeId}" maxLength="6" width="200px" class="sapUiSmallMarginEnd"/>
+                            <Input id="inputEmployee" value="{jsonCountries>/EmployeeId}" maxLength="6" width="200px" class="sapUiSmallMarginEnd"/>
                             <Label id="labelCountry" labelFor="slCountry" text="{i18n>labelCountry}" class="sapUiSmallMargin" visible="true"/>
-                            <Select id="slCountry" selectedKey="{/CountryKey}" forceSelection="false" items="{/ListCountry}" visible="true">
+                            <Select id="slCountry" selectedKey="{jsonCountries>/CountryKey}" forceSelection="false" items="{jsonCountries>/ListCountry}" visible="true">
                                 <items>
-                                    <core:Item key="{Key}" text="{Text}"/>
+                                    <core:Item key="{jsonCountries>Key}" text="{jsonCountries>Text}"/>
                                 </items>
                             </Select>
                             <Button id="btnFilter" text="{i18n>btnFilter}" icon="sap-icon://search" press="onFilter" class="sapUiSmallMarginEnd"/>
                             <Button id="btnClearFilter" text="{i18n>btnClearFilter}" icon="sap-icon://clear-filter" press="onClearFilter" class="sapUiSmallMarginEnd"/>
                          </HBox>
+
                          <HBox>
                             <Panel>
-                                <Table id="tableEmployee" items="{/Employees}">
+                                <Button id="btnShowCity" text="{i18n>showCity}" visible="{jsonModelConfig>/visibleBtnShowCity}" press="onShowCity"/>
+                                <Button id="btnHideCity" text="{i18n>hideCity}" visible="{jsonModelConfig>/visibleBtnHideCity}" press="onHideCity"/>
+                                <Table id="tableEmployee" items="{jsonEmployees>/}">
                                     <columns>
-                                        <Column> 
+                                        <Column visible="{jsonModelConfig>/visibleID}"> 
                                             <header>
                                                 <Label text="{i18n>tableId}"/>
                                             </header>
                                         </Column>
-                                        <Column> 
+                                        <Column visible="{jsonModelConfig>/visibleName}"> 
                                             <header>
                                                 <Label text="{i18n>tableName}"/>
                                             </header>
                                         </Column>
-                                        <Column> 
+                                        <Column visible="{jsonModelConfig>/visibleCountry}"> 
                                             <header>
                                                 <Label text="{i18n>tableCountry}"/>
                                             </header>
                                         </Column>
-                                        <Column> 
+                                        <Column visible="{jsonModelConfig>/visibleCity}"> 
                                             <header>
                                                 <Label text="{i18n>tableCity}"/>
                                             </header>
@@ -48,10 +51,10 @@
                                     <items>
                                         <ColumnListItem type="Active" press="showPostalCode">
                                             <cells>
-                                                <Label text="{EmployeeID}"/>
-                                                <Label text="{LastName}, {FirstName}"/>
-                                                <Label text="{Country}"/>
-                                                <Label text="{City}"/>
+                                                <Label text="{jsonEmployees>EmployeeID}"/>
+                                                <Label text="{jsonEmployees>LastName}, {jsonEmployees>FirstName}"/>
+                                                <Label text="{jsonEmployees>Country}"/>
+                                                <Label text="{jsonEmployees>City}"/>
                                             </cells>
                                         </ColumnListItem>
                                     </items>
