--- a/Employees/webapp/view/MainView.view.xml
+++ b/Employees/webapp/view/MainView.view.xml
@@ -49,7 +49,7 @@
                                     </Column>
                                     </columns>
                                     <items>
-                                        <ColumnListItem type="Active" press="showPostalCode">
+                                        <ColumnListItem type="Active" press="showOrders">
                                             <cells>
                                                 <Label text="{jsonEmployees>EmployeeID}"/>
                                                 <Label text="{jsonEmployees>LastName}, {jsonEmployees>FirstName}"/>
@@ -59,6 +59,7 @@
                                         </ColumnListItem>
                                     </items>
                                 </Table>
+                                <HBox id="ordersTable"></HBox>
                             </Panel>
                          </HBox>
                     </content>
