--- a/Employees/webapp/view/EmployeeDetails.view.xml
+++ b/Employees/webapp/view/EmployeeDetails.view.xml
@@ -4,6 +4,54 @@
           xmlns="sap.m"
           xmlns:core="sap.ui.core">
     <Page title="{i18n>employeeDetails}">   
-        <Text text="{jsonEmployees>LastName}, {jsonEmployees>FirstName}"></Text>
+        
+        <Panel>
+        
+            <FlexBox height="65px" alignItems="Center" justifyContent="Center">
+                <items>
+                    <Text text="{jsonEmployees>LastName}, {jsonEmployees>FirstName}" class="boldText"/>
+                </items>
+            </FlexBox>
+
+            <FlexBox height="65px" alignItems="Start" justifyContent="SpaceBetween">
+                <items>
+                    <VBox>
+                        <Text text="{i18n>employeeID}" class="boldText sapUiTinyMarginEnd"/>
+                        <Text text="{jsonEmployees>EmployeeID}"/>
+                    </VBox>
+                    <VBox>
+                        <Text text="{i18n>titleEmployee}" class="boldText"/>
+                        <Text text="{jsonEmployees>Title}"/>                    
+                    </VBox>
+                </items>
+            </FlexBox>
+
+            <FlexBox alignItems="Start">
+                <items>
+                    <HBox>
+                        <Text text="{i18n>countryCode}" class="boldText sapUiTinyMarginEnd"/>
+                        <Text text="{jsonEmployees>Country}"/>
+                        <layoutData>
+                            <FlexItemData growFactor="3"></FlexItemData>
+                        </layoutData>
+                    </HBox>
+                    <HBox>
+                        <Text text="{i18n>city}" class="boldText sapUiTinyMarginEnd"/>
+                        <Text text="{jsonEmployees>City}"/>
+                        <layoutData>
+                            <FlexItemData growFactor="2"></FlexItemData>
+                        </layoutData>
+                    </HBox>
+                    <FlexBox direction="Row" alignItems="Start">
+                        <Text text="{i18n>postalCode}" class="boldText sapUiTinyMarginEnd"/>
+                        <Text text="{jsonEmployees>PostalCode}"/>
+                        <layoutData>
+                            <FlexItemData growFactor="1"></FlexItemData>
+                        </layoutData>
+                    </FlexBox>                
+                </items>
+            </FlexBox>
+
+        </Panel>
     </Page>
 </mvc:View>
