--- a/Employees/webapp/view/EmployeeDetails.view.xml
+++ b/Employees/webapp/view/EmployeeDetails.view.xml
@@ -9,7 +9,7 @@
         
             <FlexBox height="65px" alignItems="Center" justifyContent="Center">
                 <items>
-                    <Text text="{jsonEmployees>LastName}, {jsonEmployees>FirstName}" class="boldText"/>
+                    <Text text="{odataNorthwind>TitleOfCourtesy} {odataNorthwind>FirstName} {odataNorthwind>LastName}" class="boldText"/>
                 </items>
             </FlexBox>
 
@@ -17,11 +17,11 @@
                 <items>
                     <VBox>
                         <Text text="{i18n>employeeID}" class="boldText sapUiTinyMarginEnd"/>
-                        <Text text="{jsonEmployees>EmployeeID}"/>
+                        <Text text="{odataNorthwind>EmployeeID}"/>
                     </VBox>
                     <VBox>
                         <Text text="{i18n>titleEmployee}" class="boldText"/>
-                        <Text text="{jsonEmployees>Title}"/>                    
+                        <Text text="{odataNorthwind>Title}"/>                    
                     </VBox>
                 </items>
             </FlexBox>
@@ -30,21 +30,22 @@
                 <items>
                     <HBox>
                         <Text text="{i18n>countryCode}" class="boldText sapUiTinyMarginEnd"/>
-                        <Text text="{jsonEmployees>Country}"/>
+                        <Text text="{odataNorthwind>Country}"/>
                         <layoutData>
                             <FlexItemData growFactor="3"></FlexItemData>
                         </layoutData>
                     </HBox>
                     <HBox>
                         <Text text="{i18n>city}" class="boldText sapUiTinyMarginEnd"/>
-                        <Text text="{jsonEmployees>City}"/>
+                        <Text text="{odataNorthwind>City}"/>
                         <layoutData>
                             <FlexItemData growFactor="2"></FlexItemData>
                         </layoutData>
                     </HBox>
                     <FlexBox direction="Row" alignItems="Start">
+
                         <Text text="{i18n>postalCode}" class="boldText sapUiTinyMarginEnd"/>
-                        <Text text="{jsonEmployees>PostalCode}"/>
+                        <Text text="{odataNorthwind>PostalCode}"/>
                         <layoutData>
                             <FlexItemData growFactor="1"></FlexItemData>
                         </layoutData>
@@ -57,7 +58,7 @@
         <Panel class="sapUiSiceCompact" backgroundDesign="Transparent">
             <headerToolbar>
                 <Toolbar>
-                    <Title text="{i18n>incidence} {= ${jsonEmployees>Country} !=='US' ? ${i18n>europe} : ${i18n>us}}"></Title>
+                    <Title text="{i18n>incidence} {= ${odataNorthwind>Country} !=='USA' ? ${i18n>europe} : ${i18n>us}}"></Title>
                     <ToolbarSpacer ></ToolbarSpacer>
                     <Button text="{i18n>createIncidence}" press="onCreateIncidence"></Button>
                 </Toolbar>
