--- a/Employees/webapp/view/OrderDetails.view.xml
+++ b/Employees/webapp/view/OrderDetails.view.xml
@@ -4,7 +4,8 @@
           xmlns="sap.m"
           xmlns:core="sap.ui.core"
           xmlns:l="sap.ui.layout"
-          xmlns:f="sap.ui.layout.form">
+          xmlns:f="sap.ui.layout.form"
+          xmlns:sc="logaligroup.Employees.control">
     <Page>
         <customHeader>
             <Bar>
@@ -50,6 +51,10 @@
                             </f:FormContainer>
                         </f:formContainers>
                     </f:Form>
+                    <FlexBox class="sapUiTinyMarginTop">
+                        <sc:Signature id="signature"></sc:Signature>
+                        <Button text="{i18n>clear}" press="onClearSignature" class="sapUiTinyMarginBegin"></Button>
+                    </FlexBox>
                 </l:Grid>
             </Panel>
         </content>
