--- a/employees/webapp/view/OrderDetails.view.xml
+++ b/employees/webapp/view/OrderDetails.view.xml
@@ -1,4 +1,12 @@
-<mvc:View controllerName="employees.controller.OrderDetails" xmlns="sap.m" xmlns:f="sap.ui.layout.form" xmlns:mvc="sap.ui.core.mvc" xmlns:l="sap.ui.layout" xmlns:sc="employees.control" displayBlock="true">
+<mvc:View 
+        controllerName="employees.controller.OrderDetails" 
+        xmlns="sap.m" 
+        xmlns:f="sap.ui.layout.form" 
+        xmlns:mvc="sap.ui.core.mvc" 
+        xmlns:l="sap.ui.layout" 
+        xmlns:upload="sap.m.upload" 
+        xmlns:sc="employees.control" 
+        displayBlock="true">
     <Page>
         <customHeader>
             <Bar>
@@ -57,19 +65,17 @@
                         <Button text="{i18n>clear}" press="onClearSignature" class="sapUiTinyMarginBegin" />
                     </FlexBox>
                 </l:Grid>
-                <UploadCollection
+                <upload:UploadSet
                     id="uploadCollection"
-                    maximumFilenameLength="55"
-                    maximumFileSize="10"
+                    maxFileNameLength="55"
+                    maxFileSize="10"
                     multiple="true"
                     sameFilenameAllowed="true"
                     instantUpload="true"
                     uploadUrl="/sap/opu/odata/sap/YSAPUI5_SRV_01/FilesSet"
-                    change="onFileChange"
-                    uploadComplete="onFileUploadComplete"
                     beforeUploadStarts="onFileBeforeUpload"
-                    fileDeleted="onFileDeleted"
-                />
+                    uploadCompleted="onFileUploadComplete"
+                    afterItemRemoved="onFileDeleted"/>
             </Panel>
             <Panel headerText="{i18n>orderProducts}">
                 <List items="{path:'odataNorthwind>Order_Details', parameters:{expand : 'Product'}, factory: '.factoryOrderDetails'}" />
